@@ -36,6 +36,7 @@ Version 1.13.0-dev:
      using the "play_side" button, thus matching the behavior of the rest of
      wesnoth. Bug fix #21025.
    * Fix bug stopping drag+drop for unit movements
+   * Revert premoved units selection to Wesnoth 1.10 behavior (#21448)
 
 Version 1.11.11:
  * Campaigns:
