@@ -117,6 +117,7 @@ Version 1.13.0-dev:
    * Fix implementation bug in random number generator: rand_pool_ is now an
      unsigned long rather than an unsigned int.
    * Fix bug #21491: fix drag+drop for unit movements
+   * Fix bug #21448: make premoved units selection like in Wesnoth 1.10
 
 Version 1.11.11:
  * Add-ons server:
